tests/NormalTests/paczka1/fuzzy1/72496136.err
Error in line 2: S186 S984 12,7
Error in line 10: XtiXzE S984 90,9
Error in line 9: Y0zkJqBoO S939 156,0
Error in line 17: Y0zkJqBoO A541 62,8
Error in line 16: hofLAZLeGr S186 20,9
Error in line 21: hofLAZLeGr S984 64,4
Error in line 23: XtiXzE S939 11,70
Error in line 19: R1IlR S186 1,9
Error in line 25: S186 S939 72,37
Error in line 26: Y0zkJqBoO A541 11,9
Error in line 29: XtiXzE S939 7,4
